@@ -6,6 +6,9 @@ Change Log:
 - Added Hunter's Wrath (with import of legendary power)
 - Fixed BreakPoint calculations for skills that depend on weapon type (e.g. EvasiveFire). This was shown correctly in break point table, but was not being calculated properly in the simulation, resulting in 1.02 APS for those skills.
 - Added import of legendary powers from cube
+- Removed Dead Man's Legacy bonus for MS fired by M4 Sentries
+- Removed "freeze" from Cull the Weak legend description
+- Sentry skill damage is now multiplicative for M4 skills, additive for sentry bolts and rockets
 
 **7/2/15**
 - Added Cube item effects (preparation for 2.3). Still need to add more legendary item types.
